tests/ui/errors/auto-impl.assoc-const.rs
#[fortuples::auto_impl]
trait Test {
    const ASSOC: usize;
}

fn main() {}
